<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_id"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        app:elevation="0dp"
        android:background="@color/colorPrimaryDark">
        <!-- Displays the content of your wallet-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/whiteTransparent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shilsac"
                android:src="@mipmap/shil" />

            <TextView
                android:id="@+id/wallet_shil_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dolrsac"
                android:src="@mipmap/dolr" />

            <TextView
                android:id="@+id/wallet_dolr_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/quidsac"
                android:src="@mipmap/quid" />

            <TextView
                android:id="@+id/wallet_quid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/penysac"
                android:src="@mipmap/peny" />

            <TextView
                android:id="@+id/wallet_peny_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">
                <!-- Displays user name and team-->
                <TextView
                    android:id="@+id/display_basic_prof"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@mipmap/goldcreeper"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <!-- Displays bank content-->
                <TextView
                    android:id="@+id/gold_display"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:drawableStart="@mipmap/gold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
            <!-- Your profile picture goes here-->
            <ImageView
                android:id="@+id/display_profile_pic"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/profile_picture" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <!-- tabs for viewpager are here-->
    <android.support.design.widget.TabLayout
        android:layout_marginTop="1dp"
        android:id="@+id/tabLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/nav_item_colors"
        app:tabMode="fixed"
        app:tabTextColor="@color/nav_item_colors" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

</LinearLayout>