...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <!-- enter username for login -->
        <EditText
            android:id="@+id/enter_username"
            android:drawableStart="@drawable/ic_action_user"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccent"
            tools:ignore="Autofill"/><!-- autofill is only supported for oreo -->
        <!-- enter password for login -->
        <EditText
            android:id="@+id/enter_password"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_action_lock_closed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
...
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/remember_me"
            android:textColor="@color/colorAccent"/>
        <!-- click to login -->
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/log_in"
            android:textAllCaps="false"
...
