...
    <string name="app_name" tools:ignore="PrivateResource">Coinz</string><!-- this is the actual name of the app, so no problem here -->
    <string name="action_settings">Settings</string>
    <string name="map">Map</string>
    <string name="depot">Depot</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="launchericon">launchericon</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="red_arrow_up">red arrow up</string>
    <string name="green_arrow_down">green arrow down</string>
    <string name="arrow_up">arrow up</string>
    <string name="select_offer_to_accept">Select offer to accept</string>
    <string name="gold">gold</string>
    <string name="back_to_depot">Back to Depot</string>
    <string name="you_have_an_exchange_capacity_of_25">You have an exchange capacity of 25</string>
    <string name="there_are_no_items_to_exchange_here">There are no items to exchange here</string>
    <string name="tap_on_item_to_exchange_it">Tap on item to exchange it.</string>
    <string name="shilsac">shilsac</string>
    <string name="dolrsac">dolrsac</string>
    <string name="quidsac">quidsac</string>
...
    <string name="shil_0">SHIL: 0</string>
    <string name="exchange">Exchange</string>
    <string name="dolr_0">DOLR: 0</string>
    <string name="quid_0">QUID: 0</string>
    <string name="peny_0">PENY: 0</string>
    <string name="filter_by_username">Filter by username</string>
    <string name="browse_offers">browse offers</string>
    <string name="make_offers">make offers</string>
    <string name="drag_amount">Drag the amount of gold you want to place onto the zone you want to acquire for your team.</string>
    <string name="grab">grab</string>
    <string name="_2000g">2000G</string>
    <string name="_4000g">4000G</string>
    <string name="_6000g">6000G</string>
...
