...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gold"
            android:src="@mipmap/gold" />
        <!-- current amount of gold in bank-->
        <TextView
            android:id="@+id/current_gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <!-- lists browse items-->
...
        android:id="@+id/rec_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <!-- go back to depot button-->
    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/back_to_depot"
        android:textSize="20sp"
        android:textColor="@color/white" />
...
